supercreative/static/login.css
@font-face {
    font-family: college-font;
    src: url(/supercreative/static/CollegiateheavyoutlineMedium-B0yx.ttf);
}

html {
    background-color: white;
}

body {
    background-color: #f1f5f9;
    height: 100vh;
    margin: 0px;
    padding: 0px;
}

.content {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 90px;
    height: auto;
}

.logo {
    font-family: college-font;
    font-size: 80px;
    color: #0e415f;
    margin-bottom: 90px;
    cursor: default;
}

form {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: white;
    border-radius: 8px;
    box-shadow: 0px 2px 8px lightgray;
    padding: 20px;
}

input, button {
    height: 44px;
    margin: 10px;
    border-radius: 6px;
    box-sizing: border-box;
}

input {
    outline: none;
    width: 380px;
    border: solid lightgray 1px;
    padding: 0px 8px;
    font-size: 16px;
}

input::placeholder {
    color: gray;
    opacity: .75;
}

input:focus {
    border: solid #1d4ed8 1px;
    box-shadow: 0px 0px 3px #38bdf8;
}

button {
    background-color: #f97316;
    border: 0px;
    color: white;
    font-size: 20px;
    font-weight: bold;
    width: 380px;
}

button:hover {
    background-color: #da6512;
    cursor: pointer;
}

.forgot-pass {
    color: #f97316;
    margin-top: 6px;
    font-size: 16px;
}

.forgot-pass:hover {
    color: #da6512;
    cursor: pointer;
}

